--- a/index.html
+++ b/index.html
@@ -8,38 +8,45 @@
   
   <title>Frontend Mentor | Four card feature section</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
   
-  Reliable, efficient delivery
-  Powered by Technology
-
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
-
-  Supervisor
-  Monitors activity to identify project roadblocks
-
-  Team Builder
-  Scans our talent network to create the optimal team for your project
-
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
+<header>
   
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+  <h2 class="header__toptitle">Reliable, efficient delivery</h2>
+  <h1 class="header__title">Powered by Technology</h1>
+
+  <div class="header__description">
+    Our Artificial Intelligence powered tools use millions of project data points
+    to ensure that your project is successful
+
+  </div>    
+</header>
+
+<main>
+  
+  <div class="card card--supervisor">
+    <div class="card__header">Supervisor</div>
+    <div class="card__description">Monitors activity to identify project roadblocks</div>
+  </div>
+
+  <div class="card card--builder">
+    <div class="card__header">Team Builder</div>
+    <div class="card__description">Scans our talent network to create the optimal team for your project</div>
+  </div>
+
+  <div class="card card--karma">
+    <div class="card__header">Karma</div>
+    <div class="card__description">Regularly evaluates our talent to ensure quality</div>
+  </div>
+
+  <div class="card card--calculator">
+    <div class="card__header">Calculator</div>
+    <div class="card__description">Uses data from past projects to provide better delivery estimates</div>
+  </div>
+
+</main>
+
 </body>
 </html>
