--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
 </header>
 
 <main>
-  
+  <div class="main__left">
   <div class="card card--supervisor">
     <div class="card__header">Supervisor</div>
     <div class="card__description">Monitors activity to identify project roadblocks</div>
   </div>
+</div>
 
+<div class="main__center">
   <div class="card card--builder">
     <div class="card__header">Team Builder</div>
     <div class="card__description">Scans our talent network to create the optimal team for your project</div>
@@ -40,11 +42,14 @@
     <div class="card__header">Karma</div>
     <div class="card__description">Regularly evaluates our talent to ensure quality</div>
   </div>
+</div>
 
+<div class="main__right">
   <div class="card card--calculator">
     <div class="card__header">Calculator</div>
     <div class="card__description">Uses data from past projects to provide better delivery estimates</div>
   </div>
+</div>
 
 </main>
 
